--- a/features.html
+++ b/features.html
@@ -49,7 +49,7 @@
         <h1>Other features </h1>
         <a href="shrekmovie.mp4" class="btn">highly pixelated shrek movie</a>
         <a href="streaming.html" class="btn">boredom hub streaming</a> 
-           <a href="downoad.mp4" class="btn">get the app</a>
+           <a href="Screen recording 2025-02-26 1.46.38 PM.webm" class="btn">how to get the app</a>
         
     </div>
 </body>
