--- a/streaming.html
+++ b/streaming.html
@@ -47,7 +47,7 @@
     </div>
     <div class="container">
         <h1>Movies</h1>
-        <a href="shrekmovie.mp4" class="btn">highly pixelated shrek movie</a>
+        <a href="nightdead.html" class="btn">Night of the Living Dead</a>
         <a href="streaming.html" class="btn">boredom hub streaming</a> 
            <a href="Screen recording 2025-02-26 1.46.38 PM.webm" class="btn">how to get the app</a>
         
