--- a/streaming.html
+++ b/streaming.html
@@ -62,7 +62,7 @@
         <h1>Movies</h1>
         <div class="movie-item">
             <a href="nightdead.html" class="btn">
-                <img src="night_of_the_living_dead.jpg" alt="Night of the Living Dead Poster">
+                <img src="s-l1200.jpg" alt="Night of the Living Dead Poster">
             </a>
             <h3>Night of the Living Dead</h3>
         </div>
