--- a/streaming.html
+++ b/streaming.html
@@ -92,7 +92,12 @@
             </a>
             <h3>Night of the Living Dead</h3>
         </div>
-        <!-- Add more movies here with similar structure -->
+       <div class="movie-item">
+            <a href="thegenerel.html" class="btn">
+                <img src="s-l1200.jpg" alt="Night of the Living Dead Poster">
+            </a>
+            <h3>The General</h3>
+        </div>
     </div>
 </body>
 </html>
