--- a/features.html
+++ b/features.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Features- Boredom hub</title>
-     <link rel="stylesheet" type="text/css" href="styles.css">
+    <title>Features - Boredom Hub</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <style>
-       
         .container {
             margin-top: 50px;
         }
@@ -27,26 +26,44 @@
         .btn:hover {
             background-color: #0056b3;
         }
+        .sidebar {
+            width: 200px;
+            position: fixed;
+            top: 0;
+            left: 0;
+            background-color: #333;
+            padding-top: 20px;
+        }
+        .sidebar a {
+            color: white;
+            padding: 10px 15px;
+            text-decoration: none;
+            display: block;
+            transition: background-color 0.3s;
+        }
+        .sidebar a:hover {
+            background-color: #575757;
+        }
     </style>
 </head>
 <body>
-      <div class="sidebar">
-        <a href="index.html" ">Home</a>
-        <a href="games.html"">Games</a>
-        <a href="about.html" ">About Us</a>
-        <a href="contact.html"">Contact</a>   
-        <a href="chat.html" ">Chat</a> 
-      <a href="rabbitAI.html" ">rabbitAI calculator</a>
-        <a href="partners.html" "> Our Partners</a>
-         <a href="features.html"">Features</a>
+    <div class="sidebar">
+        <a href="index.html">Home</a>
+        <a href="games.html">Games</a>
+        <a href="about.html">About Us</a>
+        <a href="contact.html">Contact</a>
+        <a href="chat.html">Chat</a>
+        <a href="rabbitAI.html">Rabbit AI Calculator</a>
+        <a href="partners.html">Our Partners</a>
+        <a href="features.html">Features</a>
         <img src="Evicly, this is boredom hub logo (1).png" alt="Boredom Hub Logo" style="width: 150px; margin-top: 20px;">
     </div>
+
     <div class="container">
-        <h1>Other features </h1>
-        <a href="shrekmovie.mp4" class="btn">highly pixelated shrek movie</a>
-        <a href="streaming.html" class="btn">boredom hub streaming</a> 
-           <a href="Screen recording 2025-02-26 1.46.38 PM.webm" class="btn">how to get the app</a>
-        
+        <h1>Other Features</h1>
+        <a href="shrekmovie.mp4" class="btn">Highly Pixelated Shrek Movie</a>
+        <a href="streaming.html" class="btn">Boredom Hub Streaming</a>
+        <a href="Screen recording 2025-02-26 1.46.38 PM.webm" class="btn">How to Get the App</a>
     </div>
 </body>
 </html>
