--- a/games.html
+++ b/games.html
@@ -6,97 +6,18 @@
     <title>Games - Boredom Hub</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <style>
-        /* Basic reset */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        /* Body setup to allow scrolling */
-        html, body {
-            height: 100%;
-            overflow-y: auto;
-            font-family: Arial, sans-serif;
-        }
-
-        /* Sidebar styles */
-        .sidebar {
-            width: 200px;
-            position: fixed;
-            top: 0;
-            left: 0;
-            height: 100%;
-            background-color: #333;
-            color: white;
-            padding-top: 20px;
-            overflow-y: auto;
-        }
-        .sidebar a {
-            color: white;
-            padding: 10px;
-            text-decoration: none;
-            display: block;
-        }
-        .sidebar a:hover {
-            background-color: #575757;
-        }
-
-        .sidebar img {
-            width: 150px;
-            margin-top: 20px;
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-        }
-
-        /* Content area setup */
-        .content {
-            margin-left: 220px;
-            padding: 20px;
-            min-height: 100%;
-        }
-
-        .games-container {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 10px;
-            justify-content: center;
-            margin-top: 20px;
-        }
-
-        .game-button {
-            padding: 10px 20px;
-            margin: 10px;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-
-        .game-button:hover {
-            background-color: #0056b3;
-        }
-
-        h1, p {
-            text-align: center;
-        }
-    </style>
 </head>
 <body>
    <div class="sidebar">
-        <a href="index.html">Home</a>
-        <a href="games.html">Games</a>
-        <a href="about.html">About Us</a>
-        <a href="contact.html">Contact</a>   
-        <a href="chat.html">Chat</a> 
-        <a href="rabbitAI.html">rabbitAI calculator</a>
-        <a href="partners.html">Our Partners</a>
-        <a href="features.html">Features</a>
-        <img src="Evicly, this is boredom hub logo (1).png" alt="Boredom Hub Logo">
+        <a href="index.html" ">Home</a>
+        <a href="games.html"">Games</a>
+        <a href="about.html" ">About Us</a>
+        <a href="contact.html"">Contact</a>   
+        <a href="chat.html" ">Chat</a> 
+      <a href="rabbitAI.html" ">rabbitAI calculator</a>
+        <a href="partners.html" "> Our Partners</a>
+         <a href="features.html"">Features</a>
+        <img src="Evicly, this is boredom hub logo (1).png" alt="Boredom Hub Logo" style="width: 150px; margin-top: 20px;">
     </div>
     <div class="content">
         <h1>Games</h1>
@@ -123,10 +44,10 @@
                 { name: "Gangster life (BTW i live the thug life)", url: "THUG LIFE/I-live-that-thug-life-everyday-im-hustil-with-my-homies.html"},
                 { name: "Age of war", url: "Age-of-your grandma/dont-look-at-the-url-you-wont-like-what-you-see.html"},
                 { name: "Snow rider", url: "Snow rider/go-to-secret-boredom-hub-site.onrender.com_____okayyyy-now-coool.html"},
-                { name: "Funny Shooter", url: "Funny shooter/im-done-with-these_friggin_stupid_funny_names_they-all-friggin-suck.html"},
+                { name: "Funny Shooter", url: "Funny shooter/im-done-with-these_friggin_stupid_funny_names_they_all-friggin-suck.html"},
                 { name: "Duck life 5", url: "Duck life 5/i-gues-this-is-the-end_of_funny-names.html"},
                 { name: "Gravity Driver", url: "Gravity driver DEFFYING_GRAVUTYYYY/nothing-to-see-here.html"},
-                { name: "Ripoff Slither.io", url: "Slither io ripoff/nothing_you_need_to_care_about_no-one-ever-looks-at-the-url.html"},
+                { name: "Ripoff Slither.io", url: "Slither io ripoff/nothing_you_need_to_care_about_no-one-ever-looks_at-the_url.html"},
                 { name: "Red vs Blue 1", url: "Red V Blue/hgjhfhhfh.html"},
                 { name: "Retro Bowl", url: "Retro Bowl/nothing.html"}
             ];
