--- a/streaming.html
+++ b/streaming.html
@@ -94,7 +94,7 @@
         </div>
        <div class="movie-item">
             <a href="thegenerel.html" class="btn">
-                <img src="s-l1200 (1).jpg" alt="the generel poster">
+                <img src="s-l1200.jpg" alt="Night of the Living Dead Poster">
             </a>
             <h3>The General</h3>
         </div>
