--- a/partners.html
+++ b/partners.html
@@ -46,7 +46,8 @@
             { name: "Vortex", url: "https://dashboard.fluxus.org/" },
             { name: "Math Project 3.0", url: "https://docs.google.com/document/d/1r0vSUKOjsFLTdtORXQ5_CYI-XbWQCQhWOhan4QY-YBM/edit?tab=t.0" },
             { name: "Rizzy Animals", url: "https://docs.google.com/presentation/d/14ef8_TIPyeuit_y2D-UNv6OkgkxB-9tiUIm5cQhnick/edit#slide=id.p" },
-            { name: "Unbore yourself in school", url: "https://uyis.netlify.app/" }
+            { name: "Unbore yourself in school", url: "https://uyis.netlify.app/" },
+             { name: "TGPAM", url: "https://sites.google.com/dpsk12.net/tgpam/home" }
         ];
         
         const container = document.getElementById("partners-container");
